# advent-of-code

./: .gitignore  Cargo.toml  README.md
2024/: Cargo.toml
2024/src/: day_1.rs  day_2.rs  main.rs
aoc-2021/: Cargo.toml
aoc-2021/src/: day_1.rs  day_10.rs  day_11.rs  day_2.rs  day_9.rs  main.rs
aoc-2024/: Cargo.toml
aoc-2024/input/: .gitignore
aoc-2024/src/: day_1.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  main.rs
aoc-2025/: .gitignore  LICENSE  aoc2025.cabal
aoc-2025/src/: Main.hs  day-1.hs
macros/: Cargo.toml
macros/src/: lib.rs
rust-macros/: .gitignore  Cargo.toml
rust-utils/: Cargo.toml
rust-utils/src/: lib.rs  matrix.rs  runner.rs
util/: Cargo.toml
util/src/: lib.rs  matrix.rs
utils/: Cargo.toml
utils/src/: lib.rs  matrix.rs  parse.rs  point.rs  queue.rs  runner.rs
