[package]
    authors = ["Ian Pratt <ianjdpratt@gmailcom>"]
    edition = "2021"
    name    = "macros"
    version = "0.1.0"

[dependencies]
    quote = "^1.0.37"
    syn = { version = "^2.0.90", features = [
        "parsing",
        "extra-traits",
        "full",
    ] }

[lib]
    proc-macro = true
