[package]
    name              = "utils"
    version           = "0.1.0"
    authors.workspace = true
    edition.workspace = true

[dependencies]
    macros    = { path = "../macros" }
    itertools = "^0.13.0"
    anyhow    = "^1.0.9"
    num       = "^0.4.3"
    clap      = { version = "^4.5.21", features = ["derive"] }
    regex     = "^1.11.1"
